Fixed wrapping of print version

--- a/assets/docs.scss
+++ b/assets/docs.scss
@@ -26,4 +26,8 @@
  .nuxt-content img {
   max-width: 100%;
 }
+
+pre, code {
+  white-space: normal;
+}
  
